Correction de l'overflow dans le tableau des scores

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,11 @@ table tr:nth-child(even) {
 	color: #472c18;
 }
 
+table tr td:first-child {
+    max-width: 185px;
+    overflow: hidden;
+}
+
 
 
 .wrapper {
